--- a/index.html
+++ b/index.html
@@ -1,6 +1,102 @@
+<!doctype html>
 <html>
-<header><title>Welcome to the GT Time Museum</title></header>
-	<body>
-		This is the dummy page for our final project.
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+	<script src="/resources/argon.min.js"></script>
+	<script src="/resources/build.js"></script>
+	<script src="/resources/CSS3DArgonHUD.js"></script>
+	<script src="/resources/CSS3DArgonRenderer.js"></script>
+	<link rel="stylesheet" type="text/css" href="/resources/style.css">
+	<title>Ga Tech Time Museum</title>
+</head>
+
+
+<body>
+	<a-scene>
+		<a-assets>
+			<a-asset-item src="images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
+			<a-asset-item src="images/roomPanorama.jpg" id="roomPano"></a-asset-item>
+			<a-asset-item src="models/portalRing.obj" id="portalRing-obj" ></a-asset-item>
+			<a-asset-item src="models/portalRing.mtl" id="portalRing-mtl" ></a-asset-item>
+			<a-asset-item src="models/SeedPod.obj" id="SeedPod-obj" ></a-asset-item>
+			<a-asset-item src="models/SeedPod.mtl" id="SeedPod-mtl" ></a-asset-item>
+		</a-assets>
+		<a-entity light="type: ambient; color: #CCC" intensity="3"></a-entity>
+		<a-entity id="camera">
+			<a-entity camera look-controls wasd-controls >
+				<a-entity 
+				geometry="primitive: ring; radiusOuter: 0.15; radiusInner: 0.10;"
+				material="color: blue;"
+				position="0 0 -1"
+				cursor="fuse: 1000;"
+				raycaster="objects: .clickable;">
+
+				<a-animation begin="cursor-fusing"
+				attribute="scale"
+				easing="ease-in"
+				fill="forwards"
+				from= "1 1 1"
+				to="0.1 0.1 0.1"
+				dur="1000"></a-animation>
+
+				<a-animation begin="click"
+				attribute="scale"
+				easing="ease-in"
+				fill="forwards"
+				from= "0.1 0.1 0.1"
+				to="1 1 1"
+				dur="200"></a-animation>	  		   
+			</a-entity>
+		</a-entity>
+	</a-entity>
+
+	<a-entity id="sky">
+		
+		<a-sphere id="quad" src ="#quadPano" radius="100" opacity="0" side="double" selectable="false"></a-sphere>
+
+		<a-entity id="future" position="0 74.5 0">
+			<a-entity id="portalObject">
+				<a-sphere class= "clickable" id="backPortal" radius="1" opacity ="0.25" position="0 -2 0"></a-sphere>
+				<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10  ">
+					
+
+					<a-animation   attribute="rotation"
+					from= "0 0 0"
+					to="360 0 360"
+					dur="5000"
+					easing="linear"
+					repeat="indefinite"
+					></a-animation>
+				</a-obj-model>
+				<a-obj-model id= "middleRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "9 9 9 ">
+					<a-animation   attribute="rotation"
+					from= "0 0 0"
+					to="0 360 360"
+					dur="5000"
+					easing="linear"
+					repeat="indefinite"
+					></a-animation>
+				</a-obj-model>
+				<a-obj-model id= "innerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "8 8 8">
+					<a-animation   attribute="rotation"
+					from= "0 0 0"
+					to="360 360 0"
+					dur="5000"
+					easing="linear"
+					repeat="indefinite"
+					></a-animation>
+				</a-obj-model>
+			</a-entity>
+			<a-sphere class= "clickable" cursor-listener id="room" src ="#roomPano" radius="25" opacity="0" side="double">
+				<a-obj-model id= "seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl"  position="0 -2 -15" opacity="0"></a-obj-model>
+			</a-sphere>
+		</a-entity>
+
+	</a-entity>
+
+</a-scene>
+
+<script src="gttm.js"></script>
+</body>
 </html>
