--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 	<script src="/resources/build.js"></script>
 	<script src="/resources/CSS3DArgonHUD.js"></script>
 	<script src="/resources/CSS3DArgonRenderer.js"></script>
-	<link rel="stylesheet" type="text/css" href="/resources/style.css">
-	<title>Ga Tech Time Museum</title>
+	<link rel="stylesheet" type="text/css" href="/resources/css/style.css">
+	<title>GA Tech Time Museum</title>
 </head>
 
 
 <body>
 	<ar-scene>
 		<a-assets>
-			<a-asset-item src="images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
-			<a-asset-item src="images/roomPanorama.jpg" id="roomPano"></a-asset-item>
-			<a-asset-item src="models/portalRing.obj" id="portalRing-obj" ></a-asset-item>
-			<a-asset-item src="models/portalRing.mtl" id="portalRing-mtl" ></a-asset-item>
-			<a-asset-item src="models/SeedPod.obj" id="SeedPod-obj" ></a-asset-item>
-			<a-asset-item src="models/SeedPod.mtl" id="SeedPod-mtl" ></a-asset-item>
+			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
+			<a-asset-item src="resources/images/roomPanorama.jpg" id="roomPano"></a-asset-item>
+			<a-asset-item src="resources/models/portalRing.obj" id="portalRing-obj" ></a-asset-item>
+			<a-asset-item src="resources/models/portalRing.mtl" id="portalRing-mtl" ></a-asset-item>
+			<a-asset-item src="resources/models/SeedPod.obj" id="SeedPod-obj" ></a-asset-item>
+			<a-asset-item src="resources/models/SeedPod.mtl" id="SeedPod-mtl" ></a-asset-item>
 		</a-assets>
 		<a-entity light="type: ambient; color: #CCC" intensity="3"></a-entity>
 		<a-entity id="camera">
