ar-scene didn't work

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <body>
-	<ar-scene>
+	<a-scene>
 		<a-assets>
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
 			<a-asset-item src="resources/images/roomPanorama.jpg" id="roomPano"></a-asset-item>
@@ -95,7 +95,7 @@
 
 	</a-entity>
 
-</ar-scene>
+</a-scene>
 
 <script src="gttm.js"></script>
 </body>
