--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-	<script src="/resources/argon.min.js"></script>
-	<script src="/resources/build.js"></script>
-	<script src="/resources/CSS3DArgonHUD.js"></script>
-	<script src="/resources/CSS3DArgonRenderer.js"></script>
+	<script src="/resources/js/argon.min.js"></script>
+	<script src="/resources/js/build.js"></script>
+	<script src="/resources/js/CSS3DArgonHUD.js"></script>
+	<script src="/resources/js/CSS3DArgonRenderer.js"></script>
 	<link rel="stylesheet" type="text/css" href="/resources/css/style.css">
 	<title>GA Tech Time Museum</title>
 </head>
 
 
 <body>
-	<ar-scene>
+	<a-scene>
 		<a-assets>
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
 			<a-asset-item src="resources/images/roomPanorama.jpg" id="roomPano"></a-asset-item>
@@ -95,7 +95,7 @@
 
 	</a-entity>
 
-</ar-scene>
+</a-scene>
 
 <script src="resources/js/gttm.js"></script>
 </body>
