--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-	<script src="/resources/js/argon.min.js"></script>
-	<script src="/resources/js/build.js"></script>
-	<script src="/resources/js/CSS3DArgonHUD.js"></script>
-	<script src="/resources/js/CSS3DArgonRenderer.js"></script>
-	<link rel="stylesheet" type="text/css" href="/resources/css/style.css">
+	<script src="resources/js/argon.min.js"></script>
+	<script src="resources/js/build.js"></script>
+	<script src="resources/js/CSS3DArgonHUD.js"></script>
+	<script src="resources/js/CSS3DArgonRenderer.js"></script>
+	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
 	<title>GA Tech Time Museum</title>
 </head>
 
