--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 				to="0"
 				dur="1000"></a-animation>
 
-				<!-- <a-animation begin="click"
+				<a-animation begin="click"
 				attribute="scale"
 				easing="ease-in"
 				fill="forwards"
 				from= "0.1 0.1 0.1"
 				to="1 1 1"
-				dur="200"></a-animation> -->	  		   
+				dur="200"></a-animation>	  		   
 			<!-- </a-entity> -->
 		</ar-camera>
 	</a-entity>
