--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
                     rotation="0 0 90"
                     material="color: #6666FF; shader:flat;opacity:0.8;">
 
-				<a-animation begin="cursor-fusing"
+				<!-- <a-animation begin="cursor-fusing"
 				attribute="geometry.thetaLength"
 				easing="ease-in-out-cubic"
 				fill="forwards"
 				from= "360"
 				to="0"
-				dur="1000"></a-animation>
+				dur="1000"></a-animation> -->
 
-				<a-animation begin="click"
+				<!-- <a-animation begin="click"
 				attribute="scale"
 				easing="ease-in"
 				fill="forwards"
 				from= "0.1 0.1 0.1"
 				to="1 1 1"
 				dur="200"></a-animation>	  		   
-			<!-- </a-entity> -->
+			<!-- </a-entity> --> -->
 		</ar-camera>
 	</a-entity>
 
