--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				from= "0.1 0.1 0.1"
 				to="1 1 1"
 				dur="200"></a-animation>	  		   
-			<!-- </a-entity> --> -->
+			<!-- </a-entity> --> 
 		</ar-camera>
 	</a-entity>
 
