--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				</a-obj-model>
 			</a-entity>
 			<a-sphere class= "clickable" cursor-listener id="room" src ="#roomPano" radius="25" opacity="0" side="double">
-				<a-obj-model id= "seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl"  position="0 -2 -15" opacity="0"></a-obj-model>
+				<a-obj-model id= "seedPod" blurbViewOpener src="#SeedPod-obj" mtl="#SeedPod-mtl"  position="0 -2 -15" opacity="0"></a-obj-model>
 			</a-sphere>
 		</a-entity>
 
