--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
 				</a-obj-model>
 			</a-entity>
 			<a-sphere class= "clickable" cursor-listener id="room" src ="#roomPano" radius="25" opacity="0" side="double">
-				<a-obj-model id= "seedPod" blurbViewOpener="position: 10 10 10" src="#SeedPod-obj" mtl="#SeedPod-mtl"  position="0 -2 -15" opacity="0"></a-obj-model>
+
+			<a-entity position="0 -2 -15">
+				<a-obj-model id= "seedPod" blurbViewOpener="position: 10 10 10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
+			</a-entity>
+			
 			</a-sphere>
 		</a-entity>
 
