--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
 	<script src="resources/js/CSS3DArgonHUD.js"></script>
 	<script src="resources/js/CSS3DArgonRenderer.js"></script>
 	<script src="resources/js/aframe-look-at-component.js"></script>
-    <script src="resources/js/aframe-animation-component.min.js"></script>
+	<script src="resources/js/aframe-animation-component.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
 	<title>GA Tech Time Museum</title>
 </head>
 
 
 <body>
+	<!-- Seed Card -->
+	<div id="seedTitle" class="textbox">Check out this seed!</div>
+	<div id="seedBlurb" class="textbox">
+		filler text filler text<br>
+		filler text filler text<br>
+		filler text filler text<br>
+		filler text filler text<br>
+		filler text filler text<br>
+		filler text filler text
+	</div>
+
 	<ar-scene>
 		<a-assets>
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
@@ -24,16 +35,18 @@
 			<a-asset-item src="resources/models/SeedPod.obj" id="SeedPod-obj" ></a-asset-item>
 			<a-asset-item src="resources/models/SeedPod.mtl" id="SeedPod-mtl" ></a-asset-item>
 		</a-assets>
+
 		<a-entity light="type: ambient; color: #CCC" intensity="3"></a-entity>
 		<!-- <a-entity id="camera"> -->
-			<!-- <a-entity camera look-controls wasd-controls > -->
+		<!-- <a-entity camera look-controls wasd-controls > -->
+		
 		<ar-camera>
-				<a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 1000"
-                    position="0 0 -0.1"
-                    geometry="primitive:ring; radiusInner: 0.0025; radiusOuter: 0.00375; thetaStart: 0; thetaLength: 360;"
-                    scale="1 1 1"
-                    rotation="0 0 90"
-                    material="color: #6666FF; shader:flat;opacity:0.8;">
+			<a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 1000"
+			position="0 0 -0.1"
+			geometry="primitive:ring; radiusInner: 0.0025; radiusOuter: 0.00375; thetaStart: 0; thetaLength: 360;"
+			scale="1 1 1"
+			rotation="0 0 90"
+			material="color: #6666FF; shader:flat;opacity:0.8;">
 
 				<!-- <a-animation begin="cursor-fusing"
 				attribute="geometry.thetaLength"
@@ -50,60 +63,61 @@
 				from= "0.1 0.1 0.1"
 				to="1 1 1"
 				dur="200"></a-animation>	  		   
-			<!-- </a-entity> --> 
-		</ar-camera>
-	</a-entity>
-
-	<a-entity id="sky">
-		
-		<a-sphere id="quad" src ="#quadPano" radius="100" opacity="0" side="double" selectable="false"></a-sphere>
-
-		<a-entity id="future" position="0 74.5 0">
-			<a-entity id="portalObject">
-				<a-sphere class= "clickable" cursor-listener id="backPortal" radius="1" opacity ="0.25" position="0 -2 0"></a-sphere>
-				<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10  ">
-					
-
-					<a-animation   attribute="rotation"
-					from= "0 0 0"
-					to="360 0 360"
-					dur="5000"
-					easing="linear"
-					repeat="indefinite"
-					></a-animation>
-				</a-obj-model>
-				<a-obj-model id= "middleRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "9 9 9 ">
-					<a-animation   attribute="rotation"
-					from= "0 0 0"
-					to="0 360 360"
-					dur="5000"
-					easing="linear"
-					repeat="indefinite"
-					></a-animation>
-				</a-obj-model>
-				<a-obj-model id= "innerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "8 8 8">
-					<a-animation   attribute="rotation"
-					from= "0 0 0"
-					to="360 360 0"
-					dur="5000"
-					easing="linear"
-					repeat="indefinite"
-					></a-animation>
-				</a-obj-model>
-			</a-entity>
-			<a-sphere class= "clickable" cursor-listener id="room" src ="#roomPano" radius="25" opacity="0" side="double">
-
-			<a-entity position="0 -2 -15">
-				<a-obj-model id= "seedPod" blurbViewOpener="position: 10 10 10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
-			</a-entity>
-			
-			</a-sphere>
+				<!-- </a-entity> --> 
+			</ar-camera>
 		</a-entity>
 
-	</a-entity>
+		<a-entity id="sky">
 
-</ar-scene>
+			<a-sphere id="quad" src ="#quadPano" radius="100" opacity="0" side="double" selectable="false"></a-sphere>
 
-<script src="resources/js/gttm.js"></script>
+			<a-entity id="future" position="0 74.5 0">
+				<a-entity id="portalObject">
+					<a-sphere class= "clickable" cursor-listener id="backPortal" radius="1" opacity ="0.25" position="0 -2 0"></a-sphere>
+					<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10  ">
+
+
+						<a-animation   attribute="rotation"
+						from= "0 0 0"
+						to="360 0 360"
+						dur="5000"
+						easing="linear"
+						repeat="indefinite"
+						></a-animation>
+					</a-obj-model>
+					<a-obj-model id= "middleRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "9 9 9 ">
+						<a-animation   attribute="rotation"
+						from= "0 0 0"
+						to="0 360 360"
+						dur="5000"
+						easing="linear"
+						repeat="indefinite"
+						></a-animation>
+					</a-obj-model>
+					<a-obj-model id= "innerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "8 8 8">
+						<a-animation   attribute="rotation"
+						from= "0 0 0"
+						to="360 360 0"
+						dur="5000"
+						easing="linear"
+						repeat="indefinite"
+						></a-animation>
+					</a-obj-model>
+				</a-entity>
+
+				<a-sphere class= "clickable" cursor-listener id="room" src ="#roomPano" radius="25" opacity="0" side="double">
+
+					<a-entity position="0 -2 -15">
+						<a-obj-model id= "seedPod" blurbViewOpener="id_titleCSS: seedTitle; id_blurbCSS: seedBlurb; position: 10 10 10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
+					</a-entity>
+
+				</a-sphere>
+			</a-entity>
+
+		</a-entity>
+
+	</ar-scene>
+
+	<script src="resources/js/gttm.js"></script>
 </body>
 </html>
