--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 				<a-sphere class= "clickable" cursor-listener id="room" src ="#roomPano" radius="25" opacity="0" side="double">
 
 					<a-entity position="0 -2 -15">
-						<a-obj-model id= "seedPod" blurbViewOpener="id_titleCSS: seedTitle; id_blurbCSS: seedBlurb; position: 10 10 10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
+						<a-obj-model id= "seedPod" blurbViewOpener="id_titleCSS: seedTitleCSS; id_blurbCSS: seedBlurbCSS; position: 10 10 10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
+						<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" rotation="0 90 0" position="0 11 0"></a-entity>  
+      					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".1 .1 .1" rotation="0 90 0" position="0 0 -10" visible='false'></a-entity>
 					</a-entity>
 
 				</a-sphere>
