--- a/index.html
+++ b/index.html
@@ -75,8 +75,6 @@
 				<a-entity id="portalObject">
 					<a-sphere class= "clickable" cursor-listener id="backPortal" radius="1" opacity ="0.25" position="0 -2 0"></a-sphere>
 					<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10  ">
-
-
 						<a-animation   attribute="rotation"
 						from= "0 0 0"
 						to="360 0 360"
@@ -106,18 +104,18 @@
 				</a-entity>
 
 				<a-sphere class= "clickable" cursor-listener id="room" src ="#roomPano" radius="25" opacity="0" side="double">
-
-					<a-entity position="0 -2 -15">
+					
+					<!-- Seed Artifact -->
+					<a-entity position="10 -2 -15">
 						<a-obj-model id= "seedPod" blurbViewOpener="id_titleCSS: seedTitleCSS; id_blurbCSS: seedBlurbCSS; position: 10 10 10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 						<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" rotation="0 90 0" position="0 11 0"></a-entity>  
       					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".1 .1 .1" rotation="0 90 0" position="0 0 -10" visible='false'></a-entity>
 					</a-entity>
 
 				</a-sphere>
+
 			</a-entity>
-
 		</a-entity>
-
 	</ar-scene>
 
 	<script src="resources/js/gttm.js"></script>
