--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					
 					<!-- Seed Artifact -->
 					<a-entity position="5 -2 -10">
-						<a-obj-model id= "seedPod" blurbViewOpener="id_titleCSS: seedTitleCSS; id_blurbCSS: seedBlurbCSS; position: 10 10 10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
+						<a-obj-model id= "seedPod" cursor-listener blurbViewOpener="id_titleCSS: seedTitleCSS; id_blurbCSS: seedBlurbCSS; position: 10 10 10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 						<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" rotation="0 90 0" position="0 11 0"></a-entity>  
       					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".1 .1 .1" rotation="0 90 0" position="0 0 -10" visible='false'></a-entity>
 					</a-entity>
