--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 					
 					<!-- Seed Artifact -->
 					<a-entity position="0 0 0">
-						<a-sphere position="0 0 0" radius="3" color="#FFFAFA"></a-sphere>
-						<a-sphere position="5 0 0" radius="3" color="#ff0000"></a-sphere>
-						<a-sphere position="0 5 0" radius="3" color="#00ff00"></a-sphere>
-						<a-sphere position="0 0 5" radius="3" color="#0000ff"></a-sphere>
+						<a-sphere position="0 0 0" radius=".3" color="#FFFAFA"></a-sphere>
+						<a-sphere position="15 0 0" radius=".3" color="#ff0000"></a-sphere>
+						<a-sphere position="0 15 0" radius=".3" color="#00ff00"></a-sphere>
+						<a-sphere position="0 0 15" radius=".3" color="#0000ff"></a-sphere>
 						
 						<a-obj-model id= "seedPod" cursor-listener blurbViewOpener="id_titleCSS: seedTitleCSS; id_blurbCSS: seedBlurbCSS; position: 10 10 10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 						<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" rotation="0 0 0" position="0 0 0"></a-entity>  
