--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					
 					<!-- Seed Artifact -->
 					<a-entity position="0 0 0">
-						<a-sphere position="0 0 0" radius=".03" color="#FFFAFA"></a-sphere>
+						<a-sphere position="0 0 0" radius=".03" color="#ffff00"></a-sphere>
 						<a-sphere position="5 0 0" radius=".03" color="#ff0000"></a-sphere>
 						<a-sphere position="0 5 0" radius=".03" color="#00ff00"></a-sphere>
 						<a-sphere position="0 0 5" radius=".03" color="#0000ff"></a-sphere>
