--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 				<a-sphere class= "clickable" cursor-listener id="room" src ="#roomPano" radius="25" opacity="0" side="double">
 					
 					<!-- Seed Artifact -->
-					<a-entity position="0 0 0">
-						<a-sphere position="0 0 0" radius=".03" color="#ffff00"></a-sphere>
+					<a-entity position="4 -1 -15">
+<!-- 						<a-sphere position="0 0 0" radius=".03" color="#ffff00"></a-sphere>
 						<a-sphere position="5 0 0" radius=".03" color="#ff0000"></a-sphere>
 						<a-sphere position="0 5 0" radius=".03" color="#00ff00"></a-sphere>
-						<a-sphere position="0 0 5" radius=".03" color="#0000ff"></a-sphere>
+						<a-sphere position="0 0 5" radius=".03" color="#0000ff"></a-sphere> -->
 						
-						<a-obj-model position="3 -1 -15" id="seedPod" cursor-listener blurbViewOpener="id_titleCSS: seedTitleCSS; id_blurbCSS: seedBlurbCSS; position: 10 10 10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
+						<a-obj-model id="seedPod" cursor-listener blurbViewOpener="id_titleCSS: seedTitleCSS; id_blurbCSS: seedBlurbCSS; position: 3 -1 -10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 						<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" rotation="0 0 0" position="0 0 0"></a-entity>  
       					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".1 .1 .1" rotation="0 0 0" position="0 0 0" visible='false'></a-entity>
 					</a-entity>
