--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ AFRAME.registerComponent('blurbViewOpener', {
 				fill="forwards"
 				from= "0.1 0.1 0.1"
 				to="1 1 1"
-				dur="200"></a-animation>	  		   
-				<!-- </a-entity> --> 
-			</ar-camera>
-		</a-entity>
+				dur="200"></a-animation>	-->  		   
+			</a-entity> 
+		</ar-camera>
+		<!-- </a-entity> -->
 
 		<a-entity id="sky">
 
