--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ AFRAME.registerComponent('blurb-view-opener', {
 
 			<a-entity id="future" position="0 74.5 0">
 				<a-entity id="portalObject">
-					<a-sphere class= "clickable" cursor-listener id="backPortal" radius="1" opacity ="0.25" position="0 -2 0"></a-sphere>
+					<a-sphere class= "clickable" id="backPortal" radius="1" opacity ="0.25" position="0 -2 0"></a-sphere>
 					<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10  ">
 						<a-animation   attribute="rotation"
 						from= "0 0 0"
@@ -126,7 +126,7 @@ AFRAME.registerComponent('blurb-view-opener', {
 					</a-obj-model>
 				</a-entity>
 
-				<a-sphere class= "clickable" cursor-listener id="room" src ="#roomPano" radius="25" opacity="0" side="double">
+				<a-sphere class= "clickable" id="room" src ="#roomPano" radius="25" opacity="0" side="double">
 					
 					<!-- Seed Artifact -->
 					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" rotation="0 0 0" position="4 -1 -11"></a-entity>  
