--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@ AFRAME.registerComponent('blurb-view-opener', {
 
 			<a-sphere id="quad" src ="#quadPano" radius="100" opacity="0" side="double" selectable="false"></a-sphere>
 
-			<a-entity id="future" cursor-listener position="0 74.5 0">
+			<a-entity id="future" position="0 74.5 0">
 				<a-entity id="portalObject">
-					<a-sphere class= "clickable" id="portal" radius="1" opacity ="0.25" position="0 -2 0"></a-sphere>
+					<a-sphere class= "clickable" cursor-listener id="portal" radius="1" opacity ="0.25" position="0 -2 0"></a-sphere>
 					<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10  ">
 						<a-animation   attribute="rotation"
 						from= "0 0 0"
