--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ AFRAME.registerComponent('blurb-view-opener', {
 			<a-entity id="future" position="0 74.5 0">
 				<a-entity id="portalObject">
 					<a-sphere class= "clickable" radius="1" opacity ="0.25" position="0 -2 0"></a-sphere>
-					<a-entity id="portal-plane" cursor-listener geometry="primitive: box; width: 2; height: 0; depth: 2" position="0 0 0"></a-entity>
+					<a-box id="portal-plane" cursor-listener width= "2" height="0.1" depth="2" position="0 0 0"></a-box>
 					<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10  ">
 						<a-animation   attribute="rotation"
 						from= "0 0 0"
