--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ AFRAME.registerComponent('blurb-view-opener', {
 
 			<a-entity id="future" position="0 74.5 0">
 				<a-entity id="portalObject">
-					<a-sphere class= "clickable" radius="1" opacity ="0" position="0 -2 0"></a-sphere>
-					<a-box id="portal-plane" cursor-listener width= "12" height="0.1" depth="12" position="0 -81 0"></a-box>
+					<!-- <a-sphere class= "clickable" radius="1" opacity ="0" position="0 -2 0"></a-sphere> -->
+					<a-box id="portal-plane" cursor-listener width= "10" height="0.1" depth="10" position="0 -31 0"></a-box>
 					<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10  ">
 						<a-animation   attribute="rotation"
 						from= "0 0 0"
