--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src="resources/js/CSS3DArgonRenderer.js"></script>
 	<script src="resources/js/aframe-look-at-component.js"></script>
 	<script src="resources/js/aframe-animation-component.min.js"></script>
+	<script src="https://rawgit.com/mayognaise/aframe-drag-look-controls-component/master/dist/aframe-drag-look-controls-component.min.js"></script> 
 	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
 	<title>GA Tech Time Museum</title>
 </head>
@@ -54,7 +55,7 @@ AFRAME.registerComponent('blurb-view-opener', {
 		filler text filler text
 	</div>
 
-	<a-scene>
+	<a-scene aframe-grab>
 		<a-assets>
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
 			<a-asset-item src="resources/images/roomPanorama.jpg" id="roomPano"></a-asset-item>
