--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ AFRAME.registerComponent('blurb-view-opener', {
 		filler text filler text
 	</div>
 
-	<a-scene aframe-grab>
+	<a-scene vr-mode-ui>
 		<a-assets>
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
 			<a-asset-item src="resources/images/roomPanorama.jpg" id="roomPano"></a-asset-item>
