--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ AFRAME.registerComponent('blurb-view-opener', {
 		filler text filler text
 	</div>
 
-	<a-scene vr-mode-ui>
+	<ar-scene vr-mode-ui>
 		<a-assets>
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
 			<a-asset-item src="resources/images/roomPanorama.jpg" id="roomPano"></a-asset-item>
@@ -68,14 +68,13 @@ AFRAME.registerComponent('blurb-view-opener', {
 		<!-- <a-entity id="camera"> -->
 		<!-- <a-entity camera look-controls wasd-controls > -->
 		
-		<a-entity camera look-controls wasd-controls>
+		<ar-camera>
 			<a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 1000"
 			position="0 0 -0.1"
 			geometry="primitive:ring; radiusInner: 0.0025; radiusOuter: 0.00375; thetaStart: 0; thetaLength: 360;"
 			scale="1 1 1"
 			rotation="0 0 90"
 			material="color: #6666FF; shader:flat;opacity:0.8;">
-
 				<!-- <a-animation begin="cursor-fusing"
 				attribute="geometry.thetaLength"
 				easing="ease-in-out-cubic"
@@ -92,7 +91,7 @@ AFRAME.registerComponent('blurb-view-opener', {
 				to="1 1 1"
 				dur="200"></a-animation>	-->  		   
 			</a-entity> 
-		</a-entity>
+		</ar-camera>
 		<!-- </a-entity> -->
 
 		<a-entity id="sky">
@@ -151,7 +150,7 @@ AFRAME.registerComponent('blurb-view-opener', {
 
 			</a-entity>
 		</a-entity>
-	</a-scene>
+	</ar-scene>
 
 	<script src="resources/js/gttm.js"></script>
 </body>
