--- a/index.html
+++ b/index.html
@@ -30,10 +30,15 @@
 
 			init: function (id_TitleCSS, id_BlurbCSS, positionString) {
 				this.el.addEventListener('mouseenter', function (evt) {
-					this.setAttribute('position', this.data.positionString);
-					var titleCSS = document.getElementById(this.data.id_TitleCSS);
+					// this.setAttribute('position', this.data.positionString);
+					// var titleCSS = document.getElementById(this.data.id_TitleCSS);
+					// titleCSS.setAttribute('visible', false);
+					// var blurbCSS = document.getElementById(this.data.id_BlurbCSS);
+					// blurbCSS.setAttribute('visible', true);
+					this.setAttribute('position', '0 0 0');
+					var titleCSS = document.getElementById('seedTitleCSS');
 					titleCSS.setAttribute('visible', false);
-					var blurbCSS = document.getElementById(this.data.id_BlurbCSS);
+					var blurbCSS = document.getElementById('seeedBlurbCSS');
 					blurbCSS.setAttribute('visible', true);
 				});
 				this.el.addEventListener('mouseleave', function (evt) {
