--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 
 			init: function (id_TitleCSS, id_BlurbCSS, positionString) {
 				this.el.addEventListener('mouseenter', function (evt) {
-					// this.setAttribute('position', this.data.positionString);
-					// var titleCSS = document.getElementById(this.data.id_TitleCSS);
-					// titleCSS.setAttribute('visible', false);
-					// var blurbCSS = document.getElementById(this.data.id_BlurbCSS);
-					// blurbCSS.setAttribute('visible', true);
-					this.setAttribute('position', '0 0 0');
-					var titleCSS = document.getElementById('seedTitleCSS');
+					this.setAttribute('position', this.data.positionString);
+					var titleCSS = document.getElementById(this.data.id_TitleCSS);
 					titleCSS.setAttribute('visible', false);
-					var blurbCSS = document.getElementById('seeedBlurbCSS');
+					var blurbCSS = document.getElementById(this.data.id_BlurbCSS);
 					blurbCSS.setAttribute('visible', true);
+					// this.setAttribute('position', '0 0 0');
+					// var titleCSS = document.getElementById('seedTitleCSS');
+					// titleCSS.setAttribute('visible', false);
+					// var blurbCSS = document.getElementById('seeedBlurbCSS');
+					// blurbCSS.setAttribute('visible', true);
 				});
 				this.el.addEventListener('mouseleave', function (evt) {
 					this.setAttribute('material', 'opacity', 1.0);
@@ -167,7 +167,7 @@
 						<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".1 .1 .1" rotation="0 0 0" position="0 0 0" visible='false'></a-entity>
 						<a-box opacity="1" id="seedMouseBox" curseor-listener blurb-view-close="id_Artifact: seedPod, id_titleCSS: seedTitleCSS, id_BlurbCSS: seedBlurbCSS" color='#BB00FF' position="0 0 0" height="20" width="40" depth="0" rotation="0 0 0" position="0 0 0"></a-box>
 						<!-- <a-obj-model id="seedPod" cursor-listener blurb-view-opener="id_titleCSS: seedTitleCSS; id_blurbCSS: seedBlurbCSS; position: 3 -1 -10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model> -->
-						<a-sphere id="seedPod" cursor-listener blurb-view-opener position="0 0 0" radius="3" color="#FFFAFA"></a-sphere>
+						<a-sphere id="seedPod" cursor-listener blurb-view-opener="id_titleCSS: seedTitleCSS; id_blurbCSS: seedBlurbCSS; position: 3 -1 -10" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					</a-entity>
 
 				</a-sphere>
