--- a/index.html
+++ b/index.html
@@ -23,28 +23,20 @@
 		AFRAME.registerComponent('blurb-view-opener-seed', {
 			init: function () {
 				this.el.addEventListener('mouseenter', function (evt) {
-					document.getElementById('seedPod').setAttribute('position', '5 0 -15');
+					document.getElementById('seedPod').setAttribute('position', '4 -1 15');
 					var titleCSS = document.getElementById('seedTitleCSS');
 					titleCSS.setAttribute('visible', false);
 					var blurbCSS = document.getElementById('seeedBlurbCSS');
 					blurbCSS.setAttribute('visible', true);
 				});
-				this.el.addEventListener('mouseleave', function (evt) {
-					this.setAttribute('material', 'opacity', 1.0);
-				});
 			}
 		});
 
-		AFRAME.registerComponent('blurb-view-close', {
-			schema: {
-				id_Artifact: {type: 'string'},
-				id_TitleCSS: {type: 'string'},
-				id_BlurbCSS: {type: 'string'}
-			},
+		AFRAME.registerComponent('blurb-view-close-seed', {
 			init: function () {
 				this.el.addEventListener('mouseleave', function (evt) {
-					var seed = document.getElementById(this.data.id_Artifact);
-					seedPod.setAttribute('position', this.data.positionString);
+					var seed = document.getElementById('seedPod');
+					seedPod.setAttribute('position', '3 -1 10');
 					var titleCSS = document.getElementById(this.data.id_titleCSS);
 					titleCSS.setAttribute('visible', true);
 					var blurbCSS = document.getElementById(this.data.id_BlurbCSS);
@@ -153,8 +145,8 @@
 						<a-sphere position="0 0 5" radius=".03" color="#0000ff"></a-sphere> -->
 						<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" rotation="0 0 0" position="0 0 0"></a-entity>  
 						<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".1 .1 .1" rotation="0 0 0" position="0 0 0" visible='false'></a-entity>
-						<a-box opacity="1" id="seedMouseBox" curseor-listener blurb-view-close="id_Artifact: seedPod, id_titleCSS: seedTitleCSS, id_BlurbCSS: seedBlurbCSS" color='#BB00FF' position="0 0 0" height="5" width="10" depth="0" rotation="0 0 0" position="0 0 0"></a-box>
-						<a-obj-model id="seedPod" cursor-listener blurb-view-opener="id_titleCSS: seedTitleCSS; id_blurbCSS: seedBlurbCSS; position: 3 -1 -10; " src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
+						<a-box opacity="1" id="seedMouseBox" curseor-listener blurb-view-close-seed color='#BB00FF' position="0 0 0" height="5" width="10" depth="0" rotation="0 0 0" position="0 0 0"></a-box>
+						<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 						<a-sphere opacity="0" cursor-listener blurb-view-opener-seed position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					</a-entity>
 
