--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		filler text filler text
 	</div>
 
-	<ar-scene vr-mode-ui>
+	<a-scene vr-mode-ui>
 		<a-assets>
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
 			<a-asset-item src="resources/images/roomPanorama.jpg" id="roomPano"></a-asset-item>
@@ -69,9 +69,9 @@
 
 		<a-entity light="type: ambient; color: #CCC" intensity="3"></a-entity>
 		<!-- <a-entity id="camera"> -->
-		<!-- <a-entity camera look-controls wasd-controls > -->
+		<a-entity camera look-controls wasd-controls >
 		
-		<ar-camera>
+		<!-- <ar-camera> -->
 			<a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 1000"
 			position="0 0 -0.1"
 			geometry="primitive:ring; radiusInner: 0.0025; radiusOuter: 0.00375; thetaStart: 0; thetaLength: 360;"
@@ -94,8 +94,8 @@
 				to="1 1 1"
 				dur="200"></a-animation>	-->  		   
 			</a-entity> 
-		</ar-camera>
-		<!-- </a-entity> -->
+		<!-- </ar-camera> -->
+		</a-entity>
 
 		<a-entity id="sky">
 
@@ -154,7 +154,7 @@
 
 			</a-entity>
 		</a-entity>
-	</ar-scene>
+	</a-scene>
 
 	<script src="resources/js/gttm.js"></script>
 </body>
