moved blurb viewing components to proper place

--- a/index.html
+++ b/index.html
@@ -21,30 +21,30 @@
 
 <body>
 	<script>
-		AFRAME.registerComponent('blurb-view-opener-seed', {
-			init: function () {
-				this.el.addEventListener('mouseenter', function (evt) {
-					document.getElementById('seedPod').setAttribute('position', '2 2 2');
-					var titleCSS = document.getElementById('seedTitleCSS');
-					titleCSS.setAttribute('visible', false);
-					var blurbCSS = document.getElementById('seeedBlurbCSS');
-					blurbCSS.setAttribute('visible', true);
-				});
-			}
-		});
+		// AFRAME.registerComponent('blurb-view-opener-seed', {
+		// 	init: function () {
+		// 		this.el.addEventListener('mouseenter', function (evt) {
+		// 			document.getElementById('seedPod').setAttribute('position', '2 2 2');
+		// 			var titleCSS = document.getElementById('seedTitleCSS');
+		// 			titleCSS.setAttribute('visible', false);
+		// 			var blurbCSS = document.getElementById('seeedBlurbCSS');
+		// 			blurbCSS.setAttribute('visible', true);
+		// 		});
+		// 	}
+		// });
 
-		AFRAME.registerComponent('blurb-view-close-seed', {
-			init: function () {
-				this.el.addEventListener('mouseleave', function (evt) {
-					var seed = document.getElementById('seedPod');
-					seedPod.setAttribute('position', '0 0 0');
-					var titleCSS = document.getElementById(this.data.id_titleCSS);
-					titleCSS.setAttribute('visible', true);
-					var blurbCSS = document.getElementById(this.data.id_BlurbCSS);
-					blurbCSS.setAttribute('visible', false);
-				});
-			}
-		});
+		// AFRAME.registerComponent('blurb-view-close-seed', {
+		// 	init: function () {
+		// 		this.el.addEventListener('mouseleave', function (evt) {
+		// 			var seed = document.getElementById('seedPod');
+		// 			seedPod.setAttribute('position', '0 0 0');
+		// 			var titleCSS = document.getElementById(this.data.id_titleCSS);
+		// 			titleCSS.setAttribute('visible', true);
+		// 			var blurbCSS = document.getElementById(this.data.id_BlurbCSS);
+		// 			blurbCSS.setAttribute('visible', false);
+		// 		});
+		// 	}
+		// });
 	</script>
 
 	<!-- Seed Card -->
@@ -141,10 +141,6 @@
 					
 					<!-- Seed Artifact -->
 					<a-entity position="4 -1 -15">
-<!-- 					<a-sphere position="0 0 0" radius=".03" color="#ffff00"></a-sphere>
-						<a-sphere position="5 0 0" radius=".03" color="#ff0000"></a-sphere>
-						<a-sphere position="0 5 0" radius=".03" color="#00ff00"></a-sphere>
-						<a-sphere position="0 0 5" radius=".03" color="#0000ff"></a-sphere> -->
 						<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" rotation="0 0 0" position="0 0 0"></a-entity>  
 						<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".1 .1 .1" rotation="0 0 0" position="0 0 0" visible='false'></a-entity>
 						<a-box opacity="1" id="seedMouseBox" curseor-listener blurb-view-close-seed color='#BB00FF' position="0 0 0" height="5" width="10" depth="0" rotation="0 0 0" position="0 0 0"></a-box>
