messing with blurbs

--- a/index.html
+++ b/index.html
@@ -48,15 +48,8 @@
 	</script>
 
 	<!-- Seed Card -->
-	<div id="seedTitle" class="textbox">Check out this seed!<br><br><br><br><br><br></div>
-	<div id="seedBlurb" class="textbox">
-		filler text filler text<br>
-		filler text filler text<br>
-		filler text filler text<br>
-		filler text filler text<br>
-		filler text filler text<br>
-		filler text filler text
-	</div>
+	<div id="seedTitle" visible="true" class="textbox">Check out this seed!<br><br><br><br><br><br></div>
+	<img src="src/images/SeedPod.jpg" id="seedBlurb" visible="false" style="width:304px;height:228px;"></img>
 
 	<a-scene vr-mode-ui>
 		<a-assets>
