--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div id="seedTitle" visible="true" class="textbox">Check out this seed!<br><br><br><br><br><br></div>
 	<img src="src/images/SeedPod.jpg" id="seedBlurb" visible="false" style="width:304px;height:228px;"></img>
 
-	<a-scene vr-mode-ui>
+	<ar-scene vr-mode-ui>
 		<a-assets>
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
 			<a-asset-item src="resources/images/roomPanorama.jpg" id="roomPano"></a-asset-item>
@@ -63,9 +63,9 @@
 
 		<a-entity light="type: ambient; color: #CCC" intensity="3"></a-entity>
 		<!-- <a-entity id="camera"> -->
-		<a-entity camera look-controls wasd-controls >
-		
-		<!-- <ar-camera> -->
+<!-- 		<a-entity camera look-controls wasd-controls >
+ -->		
+		<ar-camera>
 			<a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 2000"
 			position="0 0 -0.1"
 			geometry="primitive:ring; radiusInner: 0.0025; radiusOuter: 0.00375; thetaStart: 0; thetaLength: 360;"
@@ -88,9 +88,9 @@
 				to="1 1 1"
 				dur="200"></a-animation>	-->  		   
 			</a-entity> 
-		<!-- </ar-camera> -->
-		</a-entity>
-
+		</ar-camera>
+<!-- 		</a-entity>
+ -->
 		<a-entity id="sky">
 
 			<a-sphere id="quad" src ="#quadPano" radius="100" opacity="0" side="double" selectable="false"></a-sphere>
@@ -145,7 +145,7 @@
 
 			</a-entity>
 		</a-entity>
-	</a-scene>
+	</ar-scene>
 
 	<script src="resources/js/gttm.js"></script>
 </body>
