messing with blurb viewer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 	</script>
 
 	<!-- Seed Card -->
+	<div hidden>
 	<div id="seedTitle" visible="true" class="textbox">Check out this seed!<br><br><br><br><br><br></div>
+	</div>
 	<img src="src/images/SeedPod.jpg" id="seedBlurb" visible="false" style="width:304px;height:228px;"></img>
 
 	<ar-scene vr-mode-ui>
