Changed title of seed artifact

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	<!-- Seed Card -->
 	<div hidden>
-		<div id="seedTitle" visible="true" class="textbox">Check out this seed!<br><br><br><br></div>
+		<div id="seedTitle" visible="true" class="textbox">Programmable Seeds<br><br><br><br></div>
 		<img src="resources/images/SeedPod.jpg" id="seedBlurb" visible="false" style="width:100px;height:100px;"></img>
 	</div>
 
