blurb viewer is coming together at last

--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 			<a-sphere position="0 0 5" radius=".03" color="#0000ff"></a-sphere>
 			<a-entity position="4.64 0 -14.3" rotation="0 -90 0">
 				<a-entity rotation="0 72 0">
-					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".01 .01 .01" position="2 0 5" visible='false'></a-entity>
-					<a-box opacity="0" id="seedMouseBox" curseor-listener blurb-view-close-seed
-					color='#BB00FF' position="0 0 0" height="5" width="10" depth="0" " position="0 0 0"></a-box>
+					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.15 0.15 0.15" position="0 0 0"></a-entity>  
+					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".035 .035 .035" position="2 0 5" visible='false'></a-entity>
+					<a-box opacity=".2" id="seedMouseBox" curseor-listener blurb-view-close-seed
+					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" " position="0 0 0"></a-box>
 					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" cursor-listener blurb-view-opener-seed position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 				</a-entity>
